temporary workaround for the missing background issue in the mutation details table

--- a/portal/src/main/webapp/css/genomic.css
+++ b/portal/src/main/webapp/css/genomic.css
@@ -49,8 +49,8 @@
 
 #mutation_details .mutation_details_table
 {
-  font-size:90%;
-  color:black;
+	font-size: 90%;
+	color: black;
 }
 
 th.mutation-details-qtip-style
@@ -58,7 +58,7 @@ th.mutation-details-qtip-style
 	font-size: 115%;
 }
 
-.mutation_details_table_wrapper .mutation_table_cosmic
+#mutation_details .mutation_table_cosmic
 {
 	cursor: pointer;
 	color: #1974B8;
@@ -79,6 +79,11 @@ th.mutation-details-qtip-style
 	width: 100%;
 	overflow-x: auto;
 	clear: both;
+}
+
+#mutation_details .dataTables_filter
+{
+	width: 75%;
 }
 
 #mutation_details .mutation_diagram_toggle
